Implement cuboid variable!
Signed-off-by: Pablo Herrera <pabloherrerapalacio@gmail.com>